[package]
name = "mgo-e2e-tests"
authors = ["MangoNet Labs <build@mangonetlabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"
version = "0.1.0"

[dependencies]
workspace-hack.workspace = true

[dev-dependencies]
tempfile.workspace = true
futures.workspace = true
prometheus.workspace = true
fs_extra.workspace = true
indexmap.workspace = true
insta.workspace = true
jsonrpsee.workspace = true
test-cluster.workspace = true
rand.workspace = true
expect-test.workspace = true
tokio.workspace = true
tracing.workspace = true
assert_cmd.workspace = true
serde.workspace = true
bcs.workspace = true
anyhow.workspace = true
async-trait.workspace = true
clap.workspace = true
serde_json.workspace = true

move-binary-format.workspace = true
move-package.workspace = true
telemetry-subscribers.workspace = true
fastcrypto.workspace = true
fastcrypto-zkp.workspace = true
move-core-types.workspace = true

mgo-core.workspace = true
mgo-framework.workspace = true
mgo-json-rpc.workspace = true
mgo-json-rpc-api.workspace = true
mgo-node.workspace = true
mgo-macros.workspace = true
mgo-simulator.workspace = true
mgo-storage.workspace = true
mango-metrics.workspace = true
mgo-tool.workspace = true
mgo-protocol-config.workspace = true
mgo-types.workspace = true
mgo-move-build.workspace = true
mgo-swarm-config.workspace = true
mgo-swarm.workspace = true
mgo-test-transaction-builder.workspace = true
mgo-config.workspace = true
mgo-json-rpc-types.workspace = true
mgo.workspace = true
mgo-sdk.workspace = true
mgo-keys.workspace = true
workspace-hack.workspace = true
