[package]
name = "mgo-graphql-rpc"
version = "2024.1.0"
authors = ["MangoNet Labs <build@mangonetlabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"


[dependencies]
anyhow.workspace = true
async-graphql = {workspace = true, features = ["dataloader", "apollo_tracing", "tracing", "opentelemetry"] }
async-graphql-axum.workspace = true
async-graphql-value.workspace = true
async-trait.workspace = true
axum.workspace = true
chrono.workspace = true
clap.workspace = true
diesel.workspace = true
either.workspace = true
fastcrypto = { workspace = true, features = ["copy_key"] }
futures.workspace = true
hex.workspace = true
http.workspace = true
hyper.workspace = true
lru.workspace = true
move-binary-format.workspace = true
move-disassembler.workspace = true
move-ir-types.workspace = true
markdown-gen.workspace = true
mango-metrics.workspace = true
move-core-types.workspace = true
once_cell.workspace = true
prometheus.workspace = true
rand.workspace = true # todo: cleanup test only deps
regex.workspace = true
reqwest.workspace = true
serial_test.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
serde_yaml.workspace = true
shared-crypto.workspace = true
similar.workspace = true
mgo-sdk.workspace = true
mgo-types.workspace = true
tap.workspace = true
telemetry-subscribers.workspace = true
tracing.workspace = true
tokio.workspace = true
toml.workspace = true
tower.workspace = true
thiserror.workspace = true
uuid.workspace = true

mgo-graphql-rpc-headers.workspace = true
mgo-graphql-rpc-client.workspace = true


# TODO: put these behind feature flag to prevent leakage
# Used for dummy data
bcs.workspace = true
simulacrum.workspace = true  # todo: cleanup test only deps
mgo-json-rpc.workspace = true
mgo-json-rpc-types.workspace = true
mgo-indexer.workspace = true
mgo-rest-api.workspace = true
mgo-swarm-config.workspace = true
test-cluster.workspace = true
mgo-protocol-config.workspace = true
move-bytecode-utils.workspace = true
workspace-hack.workspace = true
mgo-package-resolver.workspace = true

[dev-dependencies]
expect-test.workspace = true
hyper.workspace = true
insta.workspace = true
serde_json.workspace = true
mgo-framework.workspace = true
tower.workspace = true

[features]
default = ["pg_backend"]
pg_integration = []
pg_backend = []
