[package]
name = "mgo-indexer"
version.workspace = true
authors = ["MangoNet Labs <build@mangonetlabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"


[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
backoff.workspace = true
bcs.workspace = true
chrono.workspace = true
serde_with.workspace = true
clap.workspace = true
tap.workspace = true
diesel.workspace = true
diesel-derive-enum.workspace = true
futures.workspace = true
itertools.workspace = true
jsonrpsee.workspace = true
prometheus.workspace = true
serde.workspace = true
serde_json.workspace = true
rayon.workspace = true
regex.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio = { workspace = true, features = ["full"] }
url.workspace = true

fastcrypto = { workspace = true, features = ["copy_key"] }
mango-metrics.workspace = true
mgo-json.workspace = true
mgo-json-rpc.workspace = true
mgo-json-rpc-api.workspace = true
mgo-json-rpc-types.workspace = true
mgo-open-rpc.workspace = true
mgo-sdk.workspace = true
mgo-types.workspace = true
mgo-protocol-config.workspace = true
telemetry-subscribers.workspace = true
mgo-rest-api.workspace = true
mgo-transaction-builder.workspace = true

move-core-types.workspace = true
move-bytecode-utils.workspace = true
move-binary-format.workspace = true

diesel_migrations.workspace = true
cached.workspace = true
workspace-hack.workspace = true

[features]
pg_integration = []

[dev-dependencies]
mgo-keys.workspace = true
mgo-move-build.workspace = true
mgo-test-transaction-builder.workspace = true
test-cluster.workspace = true
ntest.workspace = true
criterion.workspace = true
simulacrum.workspace = true

[[bin]]
name = "mgo-indexer"
path = "src/main.rs"

[[bench]]
name = "indexer_benchmark"
harness = false
