[package]
name = "mgo-json-rpc-tests"
version = "0.0.0"
authors = ["MangoNet Labs <build@mangonetlabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
workspace-hack.workspace = true

[dev-dependencies]
move-package.workspace = true
mgo-config.workspace = true
mgo-core.workspace = true
mgo-keys.workspace = true
mgo-move-build.workspace = true
mgo-test-transaction-builder.workspace = true
mgo-sdk.workspace = true
mgo-macros.workspace = true
mgo-simulator.workspace = true
mgo-json.workspace = true
mgo-json-rpc.workspace = true
mgo-json-rpc-api.workspace = true
mgo-json-rpc-types.workspace = true
mgo-open-rpc.workspace = true
mgo-open-rpc-macros.workspace = true
mgo-protocol-config.workspace = true
mgo-swarm-config.workspace = true
mgo-types.workspace = true
test-cluster.workspace = true
telemetry-subscribers.workspace = true

anyhow.workspace = true
async-trait.workspace = true
bcs.workspace = true
hyper.workspace = true
jsonrpsee.workspace = true
prometheus.workspace = true
rand.workspace = true
reqwest.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true

