[package]
name = "mgo-json-rpc-types"
version = "0.0.0"
authors = ["MangoNet Labs <build@mangonetlabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
anyhow.workspace = true
fastcrypto.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
colored.workspace = true
itertools.workspace = true
tracing.workspace = true
bcs.workspace = true
mgo-protocol-config.workspace = true
mgo-macros.workspace = true
mgo-enum-compat-util.workspace = true
enum_dispatch.workspace = true
json_to_table.workspace = true
tabled.workspace = true

move-binary-format.workspace = true
move-core-types.workspace = true
move-bytecode-utils.workspace = true

mango-metrics.workspace = true
mgo-types.workspace = true
mgo-json.workspace = true
workspace-hack.workspace = true

[dev-dependencies]
mgo-types = { workspace = true, features = ["test-utils"] }

[features]
test-utils = []
