[package]
name = "mgo-json-rpc"
version = "0.0.0"
authors = ["MangoNet Labs <build@mangonetlabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
arc-swap.workspace = true
fastcrypto.workspace = true
jsonrpsee.workspace = true
hyper.workspace = true
itertools.workspace = true
indexmap.workspace = true
tower.workspace = true
axum.workspace = true
tower-http.workspace = true
move-binary-format.workspace = true
move-core-types.workspace = true
move-package.workspace = true
move-bytecode-utils.workspace = true
prometheus.workspace = true
anyhow.workspace = true
tracing.workspace = true
async-trait.workspace = true
serde.workspace = true
futures.workspace = true
tokio = { workspace = true, features = ["full"] }
signature.workspace = true
thiserror.workspace = true
bcs.workspace = true
eyre.workspace = true
once_cell.workspace = true
serde_json.workspace = true

tap.workspace = true

mgo-core.workspace = true
mgo-storage.workspace = true
mgo-types.workspace = true
mgo-json.workspace = true
mgo-json-rpc-api.workspace = true
mgo-open-rpc.workspace = true
mgo-open-rpc-macros.workspace = true
mgo-protocol-config.workspace = true
mgo-json-rpc-types.workspace = true
mgo-transaction-builder.workspace = true
mango-metrics.workspace = true
shared-crypto.workspace = true
typed-store-error.workspace = true
cached.workspace = true
workspace-hack.workspace = true

[dev-dependencies]
mockall.workspace = true
expect-test.workspace = true
mgo-types = { workspace = true, features = ["test-utils"] }
telemetry-subscribers.workspace = true
