[package]
name = "mgo-keys"
version = "0.0.0"
authors = ["MangoNet Labs <build@mangonetlabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
signature.workspace = true
rand.workspace = true
tiny-bip39.workspace = true
bip32.workspace = true
slip10_ed25519.workspace = true
fastcrypto = { workspace = true, features = ["copy_key"] }
shared-crypto.workspace = true
mgo-types.workspace = true
workspace-hack.workspace = true
regex.workspace = true

[dev-dependencies]
tempfile.workspace = true
